--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
+    "block-stream": "0.0.9",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "solc": "^0.4.17",
+    "web3": "^0.19.0",
     "zeppelin-solidity": "^1.6.0"
   }
 }
