--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "dependencies": {
     "block-stream": "0.0.9",
     "body-parser": "^1.18.2",
+    "ethereumjs-tx": "^1.3.3",
     "express": "^4.16.2",
+    "keythereum": "^1.0.2",
+    "lodash": "^4.17.5",
     "solc": "^0.4.17",
+    "truffle-artifactor": "^3.0.3",
+    "truffle-contract": "^3.0.3",
     "web3": "^0.19.0",
     "zeppelin-solidity": "^1.6.0"
   }
