--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "solc": "^0.4.17",
     "truffle-artifactor": "^3.0.3",
     "truffle-contract": "^3.0.3",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.19.0",
     "zeppelin-solidity": "^1.6.0"
   }
